# note-zephyr

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  KConfig  Kconfig  Kconfig.blues  Kconfig.notecard  LICENSE  README.md  app.overlay  example.west.yml  note_c_hooks.c  prj.conf  sample.yaml  west.yml
.devcontainer/: devcontainer.json  onCreateCommand.sh
.github/: dependabot.yml
.github/workflows/: build-examples.yml
core/: CMakeLists.txt  Kconfig
core/hooks/: CMakeLists.txt  Kconfig  heap.c  hooks.c  hooks.h  print.c  time.c
core/transport/: CMakeLists.txt  Kconfig  transport_i2c.c  transport_uart.c
docs/: README.md  debugging.md  dev-container.md  devcontainer.md  development.md  vscode.md
dts/bindings/modem/: blues,notecard-i2c.yaml  blues,notecard-uart.yaml
example/: CMakeLists.txt  README.md  prj.conf
example/boards/: swan_r5.overlay
example/src/: main.c
examples/: README.md
examples/binary/: CMakeLists.txt  README.md  prj.conf
examples/binary/src/: main.c
examples/blinky/: README.md  i2c.overlay  prj.conf
examples/blinky/src/: main.c
examples/message-queues/: README.md  prj.conf  sample.yaml
examples/message-queues/src/: main.c
examples/overlays/: uart.overlay
examples/shell/: README.md  prj.conf
examples/shell/src/: main.c
notecard/: CMakeLists.txt  Kconfig
notecard/hooks/: CMakeLists.txt  Kconfig  heap.c  hooks.c  hooks.h  mutex.c  print.c  time.c
notecard/transport/: CMakeLists.txt  Kconfig  transport_i2c.c  transport_uart.c
notecard/utils/: CMakeLists.txt  ua.c
samples/basic/: CMakeLists.txt  i2c.overlay  prj.conf  uart.overlay
samples/basic/src/: main.c
src/: main.c  note_c_hooks.c  note_c_hooks.h  notecard.c  notecard.h
tools/openocd/: README.md  swan_r5.cfg
zephyr/: module.yml
